--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,7 +15,7 @@
         <item
             android:id="@+id/nav_tests"
             android:icon="@drawable/ic_menu_tests"
-            android:title="@string/menu_tests" />
+            android:title="@string/menu_quiz" />
         <item
             android:id="@+id/nav_labs"
             android:icon="@drawable/ic_menu_labs"
