--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,25 +7,25 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.moch.javaquiz.ui.home.HomeFragment"
+        android:name="com.moch.javaquiz.fragments.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_lectures"
-        android:name="com.moch.javaquiz.ui.lectures.LecturesFragment"
+        android:name="com.moch.javaquiz.fragments.LecturesFragment"
         android:label="@string/menu_lectures"
         tools:layout="@layout/fragment_lectures" />
 
     <fragment
         android:id="@+id/nav_tests"
-        android:name="com.moch.javaquiz.ui.tests.TestsFragment"
-        android:label="@string/menu_tests"
-        tools:layout="@layout/fragment_tests" />
+        android:name="com.moch.javaquiz.fragments.QuizFragment"
+        android:label="@string/menu_quiz"
+        tools:layout="@layout/fragment_quiz" />
 
     <fragment
         android:id="@+id/nav_labs"
-        android:name="com.moch.javaquiz.ui.labs.LabsFragment"
+        android:name="com.moch.javaquiz.fragments.LabsFragment"
         android:label="@string/menu_labs"
         tools:layout="@layout/fragment_tools" />
 
