--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -49,32 +49,35 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="32dp">
-        android:layout_marginStart="32dp">
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginEnd="293dp"
+        android:layout_marginRight="293dp">
 
-        <RadioButton
-            android:id="@+id/radio_button1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Option 1" />
 
-        <RadioButton
-            android:id="@+id/radio_button2"
-            android:layout_width="wrap_content"
+        <CheckBox
+            android:id="@+id/checkBox1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Option 2" />
+            android:text="CheckBox" />
 
-        <RadioButton
-            android:id="@+id/radio_button3"
-            android:layout_width="wrap_content"
+        <CheckBox
+            android:id="@+id/checkBox2"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Option 3" />
+            android:text="CheckBox" />
 
-        <RadioButton
-            android:id="@+id/radio_button4"
-            android:layout_width="wrap_content"
+        <CheckBox
+            android:id="@+id/checkBox3"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Option 4" />
+            android:text="CheckBox" />
+
+        <CheckBox
+            android:id="@+id/checkBox4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="CheckBox" />
 
     </RadioGroup>
 
