--- a/app/src/main/res/layout/fragment_labs.xml
+++ b/app/src/main/res/layout/fragment_labs.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.AppCompatSpinner
         android:id="@+id/labsSpinner"
         android:layout_width="match_parent"
-        android:layout_height="32dp"/>
-
+        android:layout_height="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <com.github.barteksc.pdfviewer.PDFView
         android:id="@+id/pdfView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="32dp"/>
+        android:layout_marginTop="32dp" />
 
 </android.support.constraint.ConstraintLayout>
