--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,8 +13,8 @@
             android:icon="@drawable/ic_menu_lectures"
             android:title="@string/menu_lectures" />
         <item
-            android:id="@+id/nav_tests"
-            android:icon="@drawable/ic_menu_tests"
+            android:id="@+id/nav_quiz"
+            android:icon="@drawable/ic_menu_quiz"
             android:title="@string/menu_quiz" />
         <item
             android:id="@+id/nav_labs"
