--- a/app/src/main/res/layout/fragment_labs.xml
+++ b/app/src/main/res/layout/fragment_labs.xml
@@ -14,8 +14,8 @@
         android:layout_marginRight="32dp"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <com.github.barteksc.pdfviewer.PDFView
-        android:id="@+id/pdfView"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycleViewTask"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="32dp" />
